// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /Button Button in desktop screen 1`] = `
<div
  className="MuiBox-root-jramzg MuiBox-root-7"
>
  <div
    className="MuiBox-root-jramzg MuiBox-root-8"
  >
    <button
      className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1uvsw46"
      >
        Hower
      </span>
      <span
        className="MuiTouchRipple-root-1xjrjs5"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-9"
  >
    <button
      className="MuiButtonBase-root-p6k7cg MuiButtonBase-disabled-14jjue4 MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6 MuiButton-disabled-14jjue4"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-1uvsw46"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-10"
  >
    <button
      className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedSecondary-4qewu1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1uvsw46"
      >
        Cancel
      </span>
      <span
        className="MuiTouchRipple-root-1xjrjs5"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-11"
  >
    <button
      className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-text-4h0s0h MuiButton-textPrimary-1v6by9d"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1uvsw46"
      >
        Back
      </span>
      <span
        className="MuiTouchRipple-root-1xjrjs5"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-12"
  >
    <button
      className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6 MuiButton-fullWidth-1leldyt"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1uvsw46"
      >
        Full Width
      </span>
      <span
        className="MuiTouchRipple-root-1xjrjs5"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components /Button Button in phone screen 1`] = `
<div
  style={
    Object {
      "width": "425px",
    }
  }
>
  <div
    className="MuiBox-root-jramzg MuiBox-root-1"
  >
    <div
      className="MuiBox-root-jramzg MuiBox-root-2"
    >
      <button
        className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-1uvsw46"
        >
          Hower
        </span>
        <span
          className="MuiTouchRipple-root-1xjrjs5"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-jramzg MuiBox-root-3"
    >
      <button
        className="MuiButtonBase-root-p6k7cg MuiButtonBase-disabled-14jjue4 MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6 MuiButton-disabled-14jjue4"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-1uvsw46"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-jramzg MuiBox-root-4"
    >
      <button
        className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedSecondary-4qewu1"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-1uvsw46"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-1xjrjs5"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-jramzg MuiBox-root-5"
    >
      <button
        className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-text-4h0s0h MuiButton-textPrimary-1v6by9d"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-1uvsw46"
        >
          Back
        </span>
        <span
          className="MuiTouchRipple-root-1xjrjs5"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-jramzg MuiBox-root-6"
    >
      <button
        className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6 MuiButton-fullWidth-1leldyt"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-1uvsw46"
        >
          Full Width
        </span>
        <span
          className="MuiTouchRipple-root-1xjrjs5"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components /TextFieldForm Examples 1`] = `
<div
  className="MuiBox-root-jramzg MuiBox-root-22"
>
  <div
    className="MuiBox-root-jramzg MuiBox-root-23"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1f1a8ju MuiFormControl-marginNormal-r5hwry MuiTextField-root-1fcc7ys"
      >
        <label
          className="MuiFormLabel-root-vwrlad MuiFormLabel-error-182u668 MuiInputLabel-error-u2iur9 MuiInputLabel-root-xd75kf MuiInputLabel-formControl-hppxtr MuiInputLabel-animated-1g0718g MuiInputLabel-shrink-1s2ixio"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-1vqplff MuiOutlinedInput-root-14fcecx MuiInputBase-error-182u668 MuiOutlinedInput-error-c1dbiy MuiInputBase-formControl-mzktv6"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-1f5bkv6 MuiOutlinedInput-notchedOutline-1jxxhxu"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-x02hpd"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-169n1ve MuiOutlinedInput-input-qx21yi"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-12gxaqm MuiFormHelperText-contained-1f57ghe MuiFormHelperText-error-182u668"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-24"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1f1a8ju MuiFormControl-marginNormal-r5hwry MuiTextField-root-1fcc7ys"
      >
        <label
          className="MuiFormLabel-root-vwrlad MuiInputLabel-root-xd75kf MuiInputLabel-formControl-hppxtr MuiInputLabel-animated-1g0718g MuiInputLabel-shrink-1s2ixio"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-1vqplff MuiOutlinedInput-root-14fcecx MuiInputBase-formControl-mzktv6"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-1f5bkv6 MuiOutlinedInput-notchedOutline-1jxxhxu"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-x02hpd"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-169n1ve MuiOutlinedInput-input-qx21yi"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-25"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1f1a8ju MuiFormControl-marginNormal-r5hwry MuiTextField-root-1fcc7ys"
      >
        <label
          className="MuiFormLabel-root-vwrlad MuiFormLabel-disabled-14jjue4 MuiInputLabel-disabled-14jjue4 MuiInputLabel-root-xd75kf MuiInputLabel-formControl-hppxtr MuiInputLabel-animated-1g0718g MuiInputLabel-shrink-1s2ixio"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-1vqplff MuiOutlinedInput-root-14fcecx MuiInputBase-disabled-14jjue4 MuiOutlinedInput-disabled-14jjue4 MuiInputBase-formControl-mzktv6"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-1f5bkv6 MuiOutlinedInput-notchedOutline-1jxxhxu"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-x02hpd"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-169n1ve MuiOutlinedInput-input-qx21yi MuiInputBase-disabled-14jjue4 MuiOutlinedInput-disabled-14jjue4"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-26"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1f1a8ju MuiFormControl-marginNormal-r5hwry MuiTextField-root-1fcc7ys"
      >
        <label
          className="MuiFormLabel-root-vwrlad MuiInputLabel-root-xd75kf MuiInputLabel-formControl-hppxtr MuiInputLabel-animated-1g0718g MuiInputLabel-shrink-1s2ixio"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-1vqplff MuiOutlinedInput-root-14fcecx MuiInputBase-formControl-mzktv6"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-1f5bkv6 MuiOutlinedInput-notchedOutline-1jxxhxu"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-x02hpd"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-169n1ve MuiOutlinedInput-input-qx21yi"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Components /forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-1f1a8ju MuiFormControl-marginNormal-r5hwry MuiTextField-root-1fcc7ys"
  >
    <label
      className="MuiFormLabel-root-vwrlad MuiInputLabel-root-xd75kf MuiInputLabel-formControl-hppxtr MuiInputLabel-animated-1g0718g MuiInputLabel-shrink-1s2ixio"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-1vqplff MuiOutlinedInput-root-14fcecx MuiInputBase-formControl-mzktv6"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-1f5bkv6 MuiOutlinedInput-notchedOutline-1jxxhxu"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-x02hpd"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-169n1ve MuiOutlinedInput-input-qx21yi"
        disabled={false}
        name="uniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-p6k7cg MuiButtonBase-disabled-14jjue4 MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6 MuiButton-disabled-14jjue4"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-1uvsw46"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components Images 1`] = `
<img
  alt="Iov Logo"
  className="Hook-root-z8j3qi"
  src="iov-logo.png"
/>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-jramzg MuiBox-root-13"
>
  <div
    className="MuiBox-root-jramzg MuiBox-root-14"
  >
    <h4
      className="MuiTypography-root-1882t9f MuiTypography-h4-1j1d3n8 MuiTypography-colorPrimary-1t0vta1 Hook-inline-42z04s"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-1882t9f MuiTypography-h4-1j1d3n8 Hook-inline-42z04s"
    >
       
      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-15"
  >
    <h6
      className="MuiTypography-root-1882t9f MuiTypography-h6-5dwrv0"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-16"
  />
  <div
    className="MuiBox-root-jramzg MuiBox-root-17"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-jramzg MuiBox-root-18"
  >
    <label
      className="MuiFormControlLabel-root-17tgirh"
    >
      <span
        className="MuiSwitch-root-1bbnkct"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-p6k7cg MuiIconButton-root-1jxkegm MuiPrivateSwitchBase-root-1xz0dl MuiSwitch-switchBase-1qtu99u MuiSwitch-colorPrimary-1c5zi9g"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-fvk4mi"
          >
            <span
              className="MuiSwitch-icon-rcehtm"
            />
            <input
              className="MuiPrivateSwitchBase-input-1lzfaiq"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root-1xjrjs5"
          />
        </span>
        <span
          className="MuiSwitch-bar-r86x8o"
        />
      </span>
      <span
        className="MuiTypography-root-1882t9f MuiTypography-body2-1xriqkk MuiFormControlLabel-label-wz2ov2"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-jramzg MuiBox-root-19"
  >
    <label
      className="MuiFormControlLabel-root-17tgirh"
    >
      <span
        className="MuiSwitch-root-1bbnkct"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-p6k7cg MuiIconButton-root-1jxkegm MuiPrivateSwitchBase-root-1xz0dl MuiSwitch-switchBase-1qtu99u MuiSwitch-colorPrimary-1c5zi9g"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-fvk4mi"
          >
            <span
              className="MuiSwitch-icon-rcehtm"
            />
            <input
              className="MuiPrivateSwitchBase-input-1lzfaiq"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root-1xjrjs5"
          />
        </span>
        <span
          className="MuiSwitch-bar-r86x8o"
        />
      </span>
      <span
        className="MuiTypography-root-1882t9f MuiTypography-body2-1xriqkk MuiFormControlLabel-label-wz2ov2"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-jramzg MuiBox-root-20"
  >
    <div
      className="Hook-container-6cw7a5"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="Hook-root-z8j3qi"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-jramzg MuiBox-root-21"
  >
    <p
      className="MuiTypography-root-1882t9f MuiTypography-body2-1xriqkk Hook-inline-42z04s"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="Hook-container-6cw7a5"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="Hook-root-z8j3qi"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-subtitle1-1715cb9 MuiTypography-colorPrimary-1t0vta1"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-1882t9f MuiTypography-h4-1j1d3n8"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-subtitle1-1715cb9 MuiTypography-colorPrimary-1t0vta1"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-1882t9f MuiTypography-h5-hehny2"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-subtitle1-1715cb9 MuiTypography-colorPrimary-1t0vta1"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-h6-5dwrv0"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-subtitle1-1715cb9 MuiTypography-colorPrimary-1t0vta1"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-1882t9f MuiTypography-body1-mdw6x"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-subtitle1-1715cb9 MuiTypography-colorPrimary-1t0vta1"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-1882t9f MuiTypography-body2-1xriqkk"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-subtitle1-1715cb9 MuiTypography-colorPrimary-1t0vta1"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-subtitle1-1715cb9"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-subtitle1-1715cb9 MuiTypography-colorPrimary-1t0vta1"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-subtitle2-1j1akct"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-subtitle1-1715cb9 MuiTypography-colorPrimary-1t0vta1"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-subtitle2-1j1akct MuiTypography-colorPrimary-1t0vta1 Hook-inline-42z04s"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root-1882t9f MuiTypography-subtitle2-1j1akct Hook-inline-42z04s"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-jramzg MuiBox-root-27"
  id="/signup1"
>
  <div
    className="MuiBox-root-jramzg MuiBox-root-28"
  >
    <h4
      className="MuiTypography-root-1882t9f MuiTypography-h4-1j1d3n8 MuiTypography-colorPrimary-1t0vta1 Hook-inline-42z04s"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1882t9f MuiTypography-h4-1j1d3n8 Hook-inline-42z04s"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-29"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-jramzg MuiBox-root-30"
      >
        <div
          className="MuiFormControl-root-1f1a8ju MuiFormControl-marginNormal-r5hwry MuiFormControl-fullWidth-1leldyt MuiTextField-root-1fcc7ys"
        >
          <label
            className="MuiFormLabel-root-vwrlad MuiFormLabel-required-zw8sht MuiInputLabel-required-zw8sht MuiInputLabel-root-xd75kf MuiInputLabel-formControl-hppxtr MuiInputLabel-animated-1g0718g MuiInputLabel-shrink-1s2ixio"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-3qlrev MuiInputLabel-asterisk-18vv3gn"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1vqplff MuiOutlinedInput-root-14fcecx MuiInputBase-fullWidth-1leldyt MuiInputBase-formControl-mzktv6"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1f5bkv6 MuiOutlinedInput-notchedOutline-1jxxhxu"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-x02hpd"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-169n1ve MuiOutlinedInput-input-qx21yi"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-jramzg MuiBox-root-31"
      >
        <div
          className="MuiFormControl-root-1f1a8ju MuiFormControl-marginNormal-r5hwry MuiFormControl-fullWidth-1leldyt MuiTextField-root-1fcc7ys"
        >
          <label
            className="MuiFormLabel-root-vwrlad MuiFormLabel-required-zw8sht MuiInputLabel-required-zw8sht MuiInputLabel-root-xd75kf MuiInputLabel-formControl-hppxtr MuiInputLabel-animated-1g0718g MuiInputLabel-shrink-1s2ixio"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-3qlrev MuiInputLabel-asterisk-18vv3gn"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1vqplff MuiOutlinedInput-root-14fcecx MuiInputBase-fullWidth-1leldyt MuiInputBase-formControl-mzktv6"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1f5bkv6 MuiOutlinedInput-notchedOutline-1jxxhxu"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-x02hpd"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-169n1ve MuiOutlinedInput-input-qx21yi MuiInputBase-inputType-1uutwmv"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-jramzg MuiBox-root-32"
      >
        <div
          className="MuiFormControl-root-1f1a8ju MuiFormControl-marginNormal-r5hwry MuiFormControl-fullWidth-1leldyt MuiTextField-root-1fcc7ys"
        >
          <label
            className="MuiFormLabel-root-vwrlad MuiFormLabel-required-zw8sht MuiInputLabel-required-zw8sht MuiInputLabel-root-xd75kf MuiInputLabel-formControl-hppxtr MuiInputLabel-animated-1g0718g MuiInputLabel-shrink-1s2ixio"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-3qlrev MuiInputLabel-asterisk-18vv3gn"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1vqplff MuiOutlinedInput-root-14fcecx MuiInputBase-fullWidth-1leldyt MuiInputBase-formControl-mzktv6"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1f5bkv6 MuiOutlinedInput-notchedOutline-1jxxhxu"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-x02hpd"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-169n1ve MuiOutlinedInput-input-qx21yi MuiInputBase-inputType-1uutwmv"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-jramzg MuiBox-root-33"
      >
        <div
          className="MuiBox-root-jramzg MuiBox-root-34"
        >
          <button
            className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-text-4h0s0h MuiButton-textPrimary-1v6by9d MuiButton-fullWidth-1leldyt"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1uvsw46"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root-1xjrjs5"
            />
          </button>
        </div>
        <div
          className="MuiBox-root-jramzg MuiBox-root-35"
        >
          <button
            className="MuiButtonBase-root-p6k7cg MuiButtonBase-disabled-14jjue4 MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6 MuiButton-disabled-14jjue4 MuiButton-fullWidth-1leldyt"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-1uvsw46"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-36"
  />
  <div
    className="MuiBox-root-jramzg MuiBox-root-37"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-jramzg MuiBox-root-38"
  id="/signup2"
>
  <div
    className="MuiBox-root-jramzg MuiBox-root-39"
  >
    <h4
      className="MuiTypography-root-1882t9f MuiTypography-h4-1j1d3n8 MuiTypography-colorPrimary-1t0vta1 Hook-inline-42z04s"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1882t9f MuiTypography-h4-1j1d3n8 Hook-inline-42z04s"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-40"
  >
    <div
      className="MuiBox-root-jramzg MuiBox-root-41"
    >
      <div
        className="MuiBox-root-jramzg MuiBox-root-42"
      >
        <div
          className="MuiBox-root-jramzg MuiBox-root-43"
        >
          <h6
            className="MuiTypography-root-1882t9f MuiTypography-subtitle2-1j1akct Hook-inline-42z04s"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="Hook-container-6cw7a5"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="Hook-root-z8j3qi"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-17tgirh"
      >
        <span
          className="MuiSwitch-root-1bbnkct"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-p6k7cg MuiIconButton-root-1jxkegm MuiPrivateSwitchBase-root-1xz0dl MuiSwitch-switchBase-1qtu99u MuiSwitch-colorPrimary-1c5zi9g"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-fvk4mi"
            >
              <span
                className="MuiSwitch-icon-rcehtm"
              />
              <input
                className="MuiPrivateSwitchBase-input-1lzfaiq"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
            <span
              className="MuiTouchRipple-root-1xjrjs5"
            />
          </span>
          <span
            className="MuiSwitch-bar-r86x8o"
          />
        </span>
        <span
          className="MuiTypography-root-1882t9f MuiTypography-body2-1xriqkk MuiFormControlLabel-label-wz2ov2"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-jramzg MuiBox-root-44"
    >
      <p
        className="MuiTypography-root-1882t9f MuiTypography-body1-mdw6x Hook-inline-42z04s"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-jramzg MuiBox-root-45"
    >
      <div
        className="MuiBox-root-jramzg MuiBox-root-46"
      >
        <button
          className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-text-4h0s0h MuiButton-textPrimary-1v6by9d MuiButton-fullWidth-1leldyt"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1uvsw46"
          >
            Back
          </span>
          <span
            className="MuiTouchRipple-root-1xjrjs5"
          />
        </button>
      </div>
      <div
        className="MuiBox-root-jramzg MuiBox-root-47"
      >
        <button
          className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6 MuiButton-fullWidth-1leldyt"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1uvsw46"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-1xjrjs5"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-48"
  />
  <div
    className="MuiBox-root-jramzg MuiBox-root-49"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-jramzg MuiBox-root-50"
  id="/signup3"
>
  <div
    className="MuiBox-root-jramzg MuiBox-root-51"
  >
    <h4
      className="MuiTypography-root-1882t9f MuiTypography-h4-1j1d3n8 MuiTypography-colorPrimary-1t0vta1 Hook-inline-42z04s"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1882t9f MuiTypography-h4-1j1d3n8 Hook-inline-42z04s"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-52"
  >
    <h6
      className="MuiTypography-root-1882t9f MuiTypography-subtitle1-1715cb9 Hook-inline-42z04s"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-jramzg MuiBox-root-53"
      >
        <div
          className="MuiFormControl-root-1f1a8ju MuiFormControl-marginNormal-r5hwry MuiFormControl-fullWidth-1leldyt MuiTextField-root-1fcc7ys"
        >
          <div
            className="MuiInputBase-root-1vqplff MuiOutlinedInput-root-14fcecx MuiInputBase-fullWidth-1leldyt MuiInputBase-formControl-mzktv6"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1f5bkv6 MuiOutlinedInput-notchedOutline-1jxxhxu"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-x02hpd"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-169n1ve MuiOutlinedInput-input-qx21yi"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-jramzg MuiBox-root-54"
      >
        <div
          className="MuiBox-root-jramzg MuiBox-root-55"
        >
          <button
            className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-text-4h0s0h MuiButton-textPrimary-1v6by9d MuiButton-fullWidth-1leldyt"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1uvsw46"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root-1xjrjs5"
            />
          </button>
        </div>
        <div
          className="MuiBox-root-jramzg MuiBox-root-56"
        >
          <button
            className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6 MuiButton-fullWidth-1leldyt"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-1uvsw46"
            >
              Create
            </span>
            <span
              className="MuiTouchRipple-root-1xjrjs5"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-57"
  />
  <div
    className="MuiBox-root-jramzg MuiBox-root-58"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-jramzg MuiBox-root-59"
  id="/welcome"
>
  <div
    className="MuiBox-root-jramzg MuiBox-root-60"
  >
    <h4
      className="MuiTypography-root-1882t9f MuiTypography-h4-1j1d3n8 MuiTypography-colorPrimary-1t0vta1 Hook-inline-42z04s"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-1882t9f MuiTypography-h4-1j1d3n8 Hook-inline-42z04s"
    >
       
      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-61"
  >
    <p
      className="MuiTypography-root-1882t9f MuiTypography-body1-mdw6x Hook-inline-42z04s"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-jramzg MuiBox-root-62"
    />
    <button
      className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6 MuiButton-fullWidth-1leldyt"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-1uvsw46"
      >
        Log in
      </span>
      <span
        className="MuiTouchRipple-root-1xjrjs5"
      />
    </button>
    <div
      className="MuiBox-root-jramzg MuiBox-root-63"
    />
    <button
      className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6 MuiButton-fullWidth-1leldyt"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-1uvsw46"
      >
        New account
      </span>
      <span
        className="MuiTouchRipple-root-1xjrjs5"
      />
    </button>
    <div
      className="MuiBox-root-jramzg MuiBox-root-64"
    />
    <button
      className="MuiButtonBase-root-p6k7cg MuiButton-root-fmklli MuiButton-contained-at24dj MuiButton-containedPrimary-jjq4j6 MuiButton-fullWidth-1leldyt"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-1uvsw46"
      >
        Import account
      </span>
      <span
        className="MuiTouchRipple-root-1xjrjs5"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-jramzg MuiBox-root-65"
  />
  <div
    className="MuiBox-root-jramzg MuiBox-root-66"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
